tests/semantic/valid/68_i3_let_infer_use.hulk
function wrap(x) => let y = x in y + 1;

print(wrap(0));
