tests/semantic/invalid/16_r4_forward_reference_in_program.hulk
let r = f(1) in print(r);
function f(n) => n;
